katars/tests/snaps/snapshots/snap_errors__unknown_root_module.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"import foo.bar\")"
---
Error: unknown module 'foo'
   ╭─[<test>:1:8]
   │
 1 │ import foo.bar
   │        ─┬─  
   │         ╰─── unknown module 'foo'
───╯
